// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`electronDist 1`] = `"corrupted Electron dist"`;

exports[`one-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0.dmg",
      "safeArtifactName": "TestApp-1.1.0.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0.dmg.blockmap",
      "safeArtifactName": "TestApp-1.1.0.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0-mac.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "Test App ßW-1.1.0.dmg",
          },
        ],
        "path": "Test App ßW-1.1.0-mac.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "x64",
      "file": "Test App ßW-1.1.0-mac.zip",
      "safeArtifactName": "TestApp-1.1.0-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "Test App ßW-1.1.0-mac.zip.blockmap",
      "safeArtifactName": "Test App ßW-1.1.0-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`one-package 2`] = `
Object {
  "CFBundleDisplayName": "Test App ßW",
  "CFBundleDocumentTypes": Array [
    Object {
      "CFBundleTypeName": "Folders",
      "CFBundleTypeRole": "Editor",
      "LSItemContentTypes": Array [
        "public.folder",
      ],
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "foo",
      ],
      "CFBundleTypeIconFile": "foo.icns",
      "CFBundleTypeName": "Foo",
      "CFBundleTypeRole": "Viewer",
      "LSHandlerRank": "Default",
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "boo",
      ],
      "CFBundleTypeIconFile": "icon.icns",
      "CFBundleTypeName": "Boo",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Owner",
      "LSTypeIsPackage": true,
    },
    Object {
      "CFBundleTypeExtensions": Array [
        "bar",
      ],
      "CFBundleTypeIconFile": "someFoo.icns",
      "CFBundleTypeName": "Bar",
      "CFBundleTypeRole": "Shell",
      "LSHandlerRank": "Default",
    },
  ],
  "CFBundleExecutable": "Test App ßW",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "foo",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "Test App ßW",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "LSMinimumSystemVersion": "10.12.0",
  "LSUIElement": true,
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-arm64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-universal.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.dmg",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-x64.dmg.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "latest-mac.yml",
      "fileContent": Object {
        "files": Array [
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-arm64.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-universal.zip",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.dmg",
          },
          Object {
            "sha512": "@sha512",
            "size": "@size",
            "url": "TestApp-1.1.0-mac-x64.zip",
          },
        ],
        "path": "TestApp-1.1.0-mac-x64.zip",
        "releaseDate": "@releaseDate",
        "sha512": "@sha512",
        "version": "1.1.0",
      },
    },
    Object {
      "arch": "arm64",
      "file": "TestApp-1.1.0-mac-arm64.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-arm64.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "universal",
      "file": "TestApp-1.1.0-mac-universal.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-universal.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "arch": "x64",
      "file": "TestApp-1.1.0-mac-x64.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "safeArtifactName": "TestApp-1.1.0-mac-x64.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`two-package 2`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 3`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 4`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 5`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`two-package 6`] = `
Object {
  "CFBundleDisplayName": "TestApp",
  "CFBundleExecutable": "TestApp",
  "CFBundleIconFile": "icon.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "TestApp",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.0",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`two-package 7`] = `
Array [
  "app-update.yml",
  "app.asar",
  "bn.lproj",
  "en.lproj",
  "icon.icns",
]
`;

exports[`yarn two package.json w/ native module 1`] = `
Object {
  "mac": Array [
    Object {
      "arch": "universal",
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
    Object {
      "file": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "safeArtifactName": "test-app-two-native-modules-1.1.1-universal-mac.zip.blockmap",
      "updateInfo": Object {
        "sha512": "@sha512",
        "size": "@size",
      },
    },
  ],
}
`;

exports[`yarn two package.json w/ native module 2`] = `
Object {
  "CFBundleDisplayName": "test-app-two-native-modules",
  "CFBundleExecutable": "test-app-two-native-modules",
  "CFBundleIconFile": "electron.icns",
  "CFBundleIdentifier": "org.electron-builder.testApp2",
  "CFBundleInfoDictionaryVersion": "6.0",
  "CFBundleName": "test-app-two-native-modules",
  "CFBundlePackageType": "APPL",
  "CFBundleShortVersionString": "1.1.1",
  "LSApplicationCategoryType": "your.app.category.type",
  "LSEnvironment": Object {
    "MallocNanoZone": "0",
  },
  "NSAppTransportSecurity": Object {
    "NSAllowsLocalNetworking": true,
    "NSExceptionDomains": Object {
      "127.0.0.1": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
      "localhost": Object {
        "NSIncludesSubdomains": false,
        "NSTemporaryExceptionAllowsInsecureHTTPLoads": true,
        "NSTemporaryExceptionAllowsInsecureHTTPSLoads": false,
        "NSTemporaryExceptionMinimumTLSVersion": "1.0",
        "NSTemporaryExceptionRequiresForwardSecrecy": false,
      },
    },
  },
  "NSBluetoothAlwaysUsageDescription": "This app needs access to Bluetooth",
  "NSBluetoothPeripheralUsageDescription": "This app needs access to Bluetooth",
  "NSHighResolutionCapable": true,
  "NSPrincipalClass": "AtomApplication",
  "NSSupportsAutomaticGraphicsSwitching": true,
}
`;

exports[`yarn two package.json w/ native module 3`] = `
Object {
  "files": Object {
    "index.html": Object {
      "size": "<size>",
    },
    "index.js": Object {
      "size": "<size>",
    },
    "node_modules": Object {
      "files": Object {
        "bindings": Object {
          "files": Object {
            "LICENSE.md": Object {
              "size": "<size>",
            },
            "bindings.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "debug": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "dist": Object {
              "files": Object {
                "debug.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "browser.js": Object {
                  "size": "<size>",
                },
                "common.js": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "node.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "file-uri-to-path": Object {
          "files": Object {
            "History.md": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "ms": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license.md": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "node-addon-api": Object {
          "files": Object {
            "LICENSE.md": Object {
              "size": "<size>",
            },
            "common.gypi": Object {
              "size": "<size>",
            },
            "except.gypi": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "napi-inl.deprecated.h": Object {
              "size": "<size>",
            },
            "napi-inl.h": Object {
              "size": "<size>",
            },
            "napi.h": Object {
              "size": "<size>",
            },
            "node_addon_api.gyp": Object {
              "size": "<size>",
            },
            "node_api.gyp": Object {
              "size": "<size>",
            },
            "noexcept.gypi": Object {
              "size": "<size>",
            },
            "nothing.c": Object {
              "size": "<size>",
            },
            "package-support.json": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "tools": Object {
              "files": Object {
                "README.md": Object {
                  "size": "<size>",
                },
                "check-napi.js": Object {
                  "size": "<size>",
                },
                "clang-format.js": Object {
                  "size": "<size>",
                },
                "conversion.js": Object {
                  "executable": true,
                  "size": "<size>",
                },
                "eslint-format.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "node-mac-permissions": Object {
          "files": Object {
            ".prettierrc": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "build": Object {
              "files": Object {
                "Release": Object {
                  "files": Object {
                    "permissions.node": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "index.js": Object {
              "size": "<size>",
            },
            "node_modules": Object {
              "files": Object {
                "node-addon-api": Object {
                  "files": Object {
                    "LICENSE.md": Object {
                      "size": "<size>",
                    },
                    "common.gypi": Object {
                      "size": "<size>",
                    },
                    "except.gypi": Object {
                      "size": "<size>",
                    },
                    "index.js": Object {
                      "size": "<size>",
                    },
                    "napi-inl.deprecated.h": Object {
                      "size": "<size>",
                    },
                    "napi-inl.h": Object {
                      "size": "<size>",
                    },
                    "napi.h": Object {
                      "size": "<size>",
                    },
                    "node_api.gyp": Object {
                      "size": "<size>",
                    },
                    "noexcept.gypi": Object {
                      "size": "<size>",
                    },
                    "nothing.c": Object {
                      "size": "<size>",
                    },
                    "package-support.json": Object {
                      "size": "<size>",
                    },
                    "package.json": Object {
                      "size": "<size>",
                    },
                    "tools": Object {
                      "files": Object {
                        "README.md": Object {
                          "size": "<size>",
                        },
                        "check-napi.js": Object {
                          "size": "<size>",
                        },
                        "clang-format.js": Object {
                          "size": "<size>",
                        },
                        "conversion.js": Object {
                          "executable": true,
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "permissions.mm": Object {
              "size": "<size>",
            },
          },
        },
        "node-pty": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "build": Object {
              "files": Object {
                "Release": Object {
                  "files": Object {
                    "pty.node": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "spawn-helper": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                },
              },
            },
            "deps": Object {
              "files": Object {
                ".editorconfig": Object {
                  "size": "<size>",
                },
                "winpty": Object {
                  "files": Object {
                    ".drone.yml": Object {
                      "size": "<size>",
                    },
                    "LICENSE": Object {
                      "size": "<size>",
                    },
                    "Makefile": Object {
                      "size": "<size>",
                    },
                    "README.md": Object {
                      "size": "<size>",
                    },
                    "RELEASES.md": Object {
                      "size": "<size>",
                    },
                    "VERSION.txt": Object {
                      "size": "<size>",
                    },
                    "configure": Object {
                      "size": "<size>",
                    },
                    "misc": Object {
                      "files": Object {
                        "ConinMode.ps1": Object {
                          "size": "<size>",
                        },
                        "DebugClient.py": Object {
                          "size": "<size>",
                        },
                        "DebugServer.py": Object {
                          "size": "<size>",
                        },
                        "DumpLines.py": Object {
                          "size": "<size>",
                        },
                        "EnableExtendedFlags.txt": Object {
                          "size": "<size>",
                        },
                        "Font-Report-June2016": Object {
                          "files": Object {
                            "CP437-Consolas.txt": Object {
                              "size": "<size>",
                            },
                            "CP437-Lucida.txt": Object {
                              "size": "<size>",
                            },
                            "CP932.txt": Object {
                              "size": "<size>",
                            },
                            "CP936.txt": Object {
                              "size": "<size>",
                            },
                            "CP949.txt": Object {
                              "size": "<size>",
                            },
                            "CP950.txt": Object {
                              "size": "<size>",
                            },
                            "MinimumWindowWidths.txt": Object {
                              "size": "<size>",
                            },
                            "Results.txt": Object {
                              "size": "<size>",
                            },
                            "Windows10SetFontBugginess.txt": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "FormatChar.h": Object {
                          "size": "<size>",
                        },
                        "IdentifyConsoleWindow.ps1": Object {
                          "size": "<size>",
                        },
                        "MouseInputNotes.txt": Object {
                          "size": "<size>",
                        },
                        "Notes.txt": Object {
                          "size": "<size>",
                        },
                        "Spew.py": Object {
                          "size": "<size>",
                        },
                        "build32.sh": Object {
                          "size": "<size>",
                        },
                        "build64.sh": Object {
                          "size": "<size>",
                        },
                        "color-test.sh": Object {
                          "size": "<size>",
                        },
                        "font-notes.txt": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "ship": Object {
                      "files": Object {
                        "build-pty4j-libpty.bat": Object {
                          "size": "<size>",
                        },
                        "common_ship.py": Object {
                          "size": "<size>",
                        },
                        "make_msvc_package.py": Object {
                          "size": "<size>",
                        },
                        "ship.py": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "src": Object {
                      "files": Object {
                        "agent": Object {
                          "files": Object {
                            "Agent.h": Object {
                              "size": "<size>",
                            },
                            "AgentCreateDesktop.h": Object {
                              "size": "<size>",
                            },
                            "ConsoleFont.h": Object {
                              "size": "<size>",
                            },
                            "ConsoleInput.h": Object {
                              "size": "<size>",
                            },
                            "ConsoleInputReencoding.h": Object {
                              "size": "<size>",
                            },
                            "ConsoleLine.h": Object {
                              "size": "<size>",
                            },
                            "Coord.h": Object {
                              "size": "<size>",
                            },
                            "DebugShowInput.h": Object {
                              "size": "<size>",
                            },
                            "DefaultInputMap.h": Object {
                              "size": "<size>",
                            },
                            "DsrSender.h": Object {
                              "size": "<size>",
                            },
                            "EventLoop.h": Object {
                              "size": "<size>",
                            },
                            "InputMap.h": Object {
                              "size": "<size>",
                            },
                            "LargeConsoleRead.h": Object {
                              "size": "<size>",
                            },
                            "NamedPipe.h": Object {
                              "size": "<size>",
                            },
                            "Scraper.h": Object {
                              "size": "<size>",
                            },
                            "SimplePool.h": Object {
                              "size": "<size>",
                            },
                            "SmallRect.h": Object {
                              "size": "<size>",
                            },
                            "Terminal.h": Object {
                              "size": "<size>",
                            },
                            "UnicodeEncoding.h": Object {
                              "size": "<size>",
                            },
                            "Win32Console.h": Object {
                              "size": "<size>",
                            },
                            "Win32ConsoleBuffer.h": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "configurations.gypi": Object {
                          "size": "<size>",
                        },
                        "include": Object {
                          "files": Object {
                            "winpty.h": Object {
                              "size": "<size>",
                            },
                            "winpty_constants.h": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "libwinpty": Object {
                          "files": Object {
                            "AgentLocation.h": Object {
                              "size": "<size>",
                            },
                            "LibWinptyException.h": Object {
                              "size": "<size>",
                            },
                            "WinptyInternal.h": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "shared": Object {
                          "files": Object {
                            "AgentMsg.h": Object {
                              "size": "<size>",
                            },
                            "BackgroundDesktop.h": Object {
                              "size": "<size>",
                            },
                            "Buffer.h": Object {
                              "size": "<size>",
                            },
                            "DebugClient.h": Object {
                              "size": "<size>",
                            },
                            "GenRandom.h": Object {
                              "size": "<size>",
                            },
                            "GetCommitHash.bat": Object {
                              "size": "<size>",
                            },
                            "Mutex.h": Object {
                              "size": "<size>",
                            },
                            "OsModule.h": Object {
                              "size": "<size>",
                            },
                            "OwnedHandle.h": Object {
                              "size": "<size>",
                            },
                            "PrecompiledHeader.h": Object {
                              "size": "<size>",
                            },
                            "StringBuilder.h": Object {
                              "size": "<size>",
                            },
                            "StringUtil.h": Object {
                              "size": "<size>",
                            },
                            "TimeMeasurement.h": Object {
                              "size": "<size>",
                            },
                            "UnixCtrlChars.h": Object {
                              "size": "<size>",
                            },
                            "UpdateGenVersion.bat": Object {
                              "size": "<size>",
                            },
                            "WindowsSecurity.h": Object {
                              "size": "<size>",
                            },
                            "WindowsVersion.h": Object {
                              "size": "<size>",
                            },
                            "WinptyAssert.h": Object {
                              "size": "<size>",
                            },
                            "WinptyException.h": Object {
                              "size": "<size>",
                            },
                            "WinptyVersion.h": Object {
                              "size": "<size>",
                            },
                            "winpty_snprintf.h": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "unix-adapter": Object {
                          "files": Object {
                            "InputHandler.h": Object {
                              "size": "<size>",
                            },
                            "OutputHandler.h": Object {
                              "size": "<size>",
                            },
                            "Util.h": Object {
                              "size": "<size>",
                            },
                            "WakeupFd.h": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "winpty.gyp": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "vcbuild.bat": Object {
                      "size": "<size>",
                    },
                  },
                },
              },
            },
            "lib": Object {
              "files": Object {
                "conpty_console_list_agent.js": Object {
                  "size": "<size>",
                },
                "conpty_console_list_agent.js.map": Object {
                  "size": "<size>",
                },
                "eventEmitter2.js": Object {
                  "size": "<size>",
                },
                "eventEmitter2.js.map": Object {
                  "size": "<size>",
                },
                "eventEmitter2.test.js": Object {
                  "size": "<size>",
                },
                "eventEmitter2.test.js.map": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "index.js.map": Object {
                  "size": "<size>",
                },
                "interfaces.js": Object {
                  "size": "<size>",
                },
                "interfaces.js.map": Object {
                  "size": "<size>",
                },
                "shared": Object {
                  "files": Object {
                    "conout.js": Object {
                      "size": "<size>",
                    },
                    "conout.js.map": Object {
                      "size": "<size>",
                    },
                  },
                },
                "terminal.js": Object {
                  "size": "<size>",
                },
                "terminal.js.map": Object {
                  "size": "<size>",
                },
                "terminal.test.js": Object {
                  "size": "<size>",
                },
                "terminal.test.js.map": Object {
                  "size": "<size>",
                },
                "testUtils.test.js": Object {
                  "size": "<size>",
                },
                "testUtils.test.js.map": Object {
                  "size": "<size>",
                },
                "types.js": Object {
                  "size": "<size>",
                },
                "types.js.map": Object {
                  "size": "<size>",
                },
                "unixTerminal.js": Object {
                  "size": "<size>",
                },
                "unixTerminal.js.map": Object {
                  "size": "<size>",
                },
                "unixTerminal.test.js": Object {
                  "size": "<size>",
                },
                "unixTerminal.test.js.map": Object {
                  "size": "<size>",
                },
                "utils.js": Object {
                  "size": "<size>",
                },
                "utils.js.map": Object {
                  "size": "<size>",
                },
                "windowsConoutConnection.js": Object {
                  "size": "<size>",
                },
                "windowsConoutConnection.js.map": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.js": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.js.map": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.test.js": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.test.js.map": Object {
                  "size": "<size>",
                },
                "windowsTerminal.js": Object {
                  "size": "<size>",
                },
                "windowsTerminal.js.map": Object {
                  "size": "<size>",
                },
                "windowsTerminal.test.js": Object {
                  "size": "<size>",
                },
                "windowsTerminal.test.js.map": Object {
                  "size": "<size>",
                },
                "worker": Object {
                  "files": Object {
                    "conoutSocketWorker.js": Object {
                      "size": "<size>",
                    },
                    "conoutSocketWorker.js.map": Object {
                      "size": "<size>",
                    },
                  },
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "scripts": Object {
              "files": Object {
                "post-install.js": Object {
                  "size": "<size>",
                },
                "publish.js": Object {
                  "size": "<size>",
                },
              },
            },
            "src": Object {
              "files": Object {
                "conpty_console_list_agent.ts": Object {
                  "size": "<size>",
                },
                "eventEmitter2.test.ts": Object {
                  "size": "<size>",
                },
                "eventEmitter2.ts": Object {
                  "size": "<size>",
                },
                "index.ts": Object {
                  "size": "<size>",
                },
                "interfaces.ts": Object {
                  "size": "<size>",
                },
                "shared": Object {
                  "files": Object {
                    "conout.ts": Object {
                      "size": "<size>",
                    },
                  },
                },
                "terminal.test.ts": Object {
                  "size": "<size>",
                },
                "terminal.ts": Object {
                  "size": "<size>",
                },
                "testUtils.test.ts": Object {
                  "size": "<size>",
                },
                "tsconfig.json": Object {
                  "size": "<size>",
                },
                "types.ts": Object {
                  "size": "<size>",
                },
                "unixTerminal.test.ts": Object {
                  "size": "<size>",
                },
                "unixTerminal.ts": Object {
                  "size": "<size>",
                },
                "utils.ts": Object {
                  "size": "<size>",
                },
                "win": Object {
                  "files": Object {
                    "path_util.h": Object {
                      "size": "<size>",
                    },
                  },
                },
                "windowsConoutConnection.ts": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.test.ts": Object {
                  "size": "<size>",
                },
                "windowsPtyAgent.ts": Object {
                  "size": "<size>",
                },
                "windowsTerminal.test.ts": Object {
                  "size": "<size>",
                },
                "windowsTerminal.ts": Object {
                  "size": "<size>",
                },
                "worker": Object {
                  "files": Object {
                    "conoutSocketWorker.ts": Object {
                      "size": "<size>",
                    },
                  },
                },
              },
            },
          },
        },
      },
    },
    "package.json": Object {
      "size": "<size>",
    },
  },
}
`;

exports[`yarn two package.json w/ native module 4`] = `
Array [
  "app.asar",
  "electron.icns",
  "app.asar.unpacked/node_modules/node-pty/build/Release/pty.node",
  "app.asar.unpacked/node_modules/node-pty/build/Release/spawn-helper",
  "app.asar.unpacked/node_modules/node-mac-permissions/build/Release/permissions.node",
]
`;
